--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Aula Virtual</title>
 </head>
 <body>
-    holaaa
+    <header>
+        <h1>Aula Virtual</h1>
+        <img src="Imagenes/foto.png" alt="Aula Virtual" width="200px">
+    </header>
+    <hr>
+    <nav>
+        <a href="mlv_Perfil_del_Estudiante.html">Perfil del Estudiante</a> |
+        <a href="mlv_Materias.html">Materias</a> |
+        <a href="mlv_Cursos.html">Cursos</a> |
+        <a href="mlv_Formulario.html">Formulario</a> |
+    </nav>
+    <hr>
+    <main>
+        <section>
+            <article>
+                <h1>Metodos de Estudios</h1>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/_HmFAEPeBCs?si=kzr8O32UMPdIFbbb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h1>Reproductor de musica relajante para estudiar</h1>
+                <video width="320" height="240" controls>
+                <source src="Videos/video.mp4" type="video/mp4">
+            </video>
+            </article>
+        </section>
+        <hr>
+        <section>
+            <article>
+                <h1>Reproductor de Audio </h1>
+                <audio controls>
+                    <source src="Audios/audio.mp3" type="audio/mp3">
+                </audio>
+            </article>
+        </section>
+    </main>
+    <hr>
+    <footer>
+        <a href="mlv_Perfil_del_Estudiante.html">Perfil del Estudiante</a> |
+        <a href="mlv_Materias.html">Materias</a> |
+        <a href="mlv_Cursos.html">Cursos</a> |
+        <a href="mlv_Formulario.html">Formulario</a> |
+    </footer>
 </body>
 </html>
